--- a/views/base.html
+++ b/views/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/small.css">
     <link rel="stylesheet" href="/css/medium.css">
     <link rel="stylesheet" href="/css/large.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
     <script src = "/js/menu.js"></script>
 </head>
 <body>
