Updated the website's libraries

--- a/views/contact-submit.html
+++ b/views/contact-submit.html
@@ -2,6 +2,6 @@
 
 {% block content %}
     <section>
-        <p>The form has been succesfully submitted</p>
+        <p>The form has been successfully submitted</p>
     </section>
 {% endblock %}
