Update the website for deployment

--- a/views/about.html
+++ b/views/about.html
@@ -3,5 +3,28 @@
 {% block content %}
     <section>
         <h2>About</h2>
+        <p>
+            JKW Woodworks goal is to provide quality handmade projects
+            that can be handed down from generation to generation. JKW
+            Woodworks started out as a simply hobby. We were tired of
+            goods and products from foreign countries that would break
+            soon after purchase. We wanted sturdy, hand crafted goods
+            that would stand the test of time. That is our number one
+            priority when designing and creating wood projects. 
+        </p>
+        <img src="/img/flag1-tmb.jpeg" alt="Flag on workbench">
+        <p>
+            One of signature projects is the American Flag. We make
+            standard American Flags, Thin Blue Line Flags, Thin Red Line
+            Flags, Thin Green Line Flags, and many more for every
+            occupation. Each flag has a meaning and sends a message of
+            support to our first responders and military. We have two
+            sizes that work for any occasion. The small American Flag
+            is perfect for offices and work spaces. The large flag is a
+            master piece that can be place on the wall like any other
+            painting. These flags can make a simple yet profound
+            statement that shows your support and love of the country.
+        </p>
+        <img src="/img/flag2-tmb.jpeg" alt="Set of Flags">
     </section>
 {% endblock %}
