--- a/views/contact.html
+++ b/views/contact.html
@@ -11,6 +11,9 @@
             every item in the form. We will try out best to
             get back to as soon as we can.
         </p>
+        <p>
+            You can also email us a <a href="mailto:jkwwoodworks1@gmail.com">jkwwoodworks1@gmail.com</a>.
+        </p>
     </section>
     <section>
         {% if errorMessage is defined %}
