--- a/views/login.html
+++ b/views/login.html
@@ -2,7 +2,8 @@
 
 {% block content %}
     <section>
-        <h2>login</h2>
+        <h2>Login</h2>
+        <p>{{ errorMessage }}</p>
         <form action="/login" method="POST">
             <label for="username">Username: </label>
             <input type="text" id="username" name="username">
