Updated the About page and footers.

--- a/views/about.html
+++ b/views/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <section>
-        <h2>About</h2>
+        <h2>About JKW Woodworks</h2>
         <p>
             JKW Woodworks goal is to provide quality handmade projects
             that can be handed down from generation to generation. JKW
@@ -26,5 +26,37 @@
             statement that shows your support and love of the country.
         </p>
         <img src="/img/flag2-tmb.jpeg" alt="Set of Flags">
+        <p>
+            Another signature project of ours is the epoxy tables. These
+            tables range in all sizes from small end tables to large
+            coffee and dining tables. Because of the epoxy, different
+            colors and designs are endless and each table is unique.
+            These tables take time to make due to the curing process of
+            the epoxy but will last a life time. After we saw different
+            epoxy projects on social media, we decided to give it a shot.
+            And we nailed it! Epoxy can be tricky and expensive but when
+            done right, it creates a strong, naturally beautiful piece
+            of art that is very durable and will make a statement. 
+        </p>
+        <img src="/img/table1-tmb.jpeg" alt="A flag and table">
+        <p>
+            We work with all sorts of different lumber ranging from pine
+            or dimensional lumber to cedar, cherry, and walnut. Each
+            piece is unique and made to the customers desires. 
+        </p>
+        <img src="/img/table2-tmb.jpeg" alt="A wooden table">
+        <p>
+            We have many different plans and designs for more projects.
+            We are constantly improving our designs and the way we
+            construct items so the best possible piece is created every
+            time. Feel free to contact us about and ideas or questions
+            you may have. We are always looking for feedback and new
+            ideas that will help us improve. We enjoy making great wood
+            projects and hope you find joy in our work as well.
+        </p>
+        <img src="/img/table3-tmb.jpeg" alt="A flag table">
+        <p>
+            - JKW Woodworks Team
+        </p>
     </section>
 {% endblock %}
