--- a/views/base.html
+++ b/views/base.html
@@ -25,7 +25,7 @@
                 <li><a class="nav-link" {% if '/home' in path %} id="thePage" {% endif %} href="/">Home</a></li>
                 <li><a class="nav-link" {% if '/products' in path %} id="thePage" {% endif %} href="/products">Products</a></li>
                 <li><a class="nav-link" {% if '/contact' in path %} id="thePage" {% endif %} href="/contact">Contact Us</a></li>
-                <li><a class="nav-link" {% if '/about' in path %} id="thePage" {% endif %} href="/about">About Us</a></li>
+                <li><a class="nav-link" {% if '/about' in path %} id="thePage" {% endif %} href="/about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -35,7 +35,8 @@
     </main>
     <footer>
         <p>&copy;2021 | JKW Wood Works</p>
-        <a href="https://www.facebook.com"> <img src="/img/facebook.png" alt="" width="50" height="50"> </a>
+        <a href="https://www.facebook.com"> <img src="/img/facebook.png" alt="Facebook Page" width="50" height="50"> </a>
+        <a href="https://www.etsy.com/your/shops/JKWWoodWorks/onboarding/listings?ref=hdr-mcpa"><img src="/img/etsy.png" alt="Etsy Page" width="50" height="50"></a>
     </footer>
 </body>
 </html>
