--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% if product is defined %}
+{% if product %}
     <section>
         <h2>The Latest Product</h2>
         <div class="item">
-            <img src="data:image/{{ product.img.contentType }};base64,{{ product.img.data.toString('base64') }}" alt="{{ product.title }}">
+            <img src="/bucket/stand-{{ product.img }}" alt="{{ product.title }}">
             <h3>{{ product.title }}</h3>
-            <p><a href="/product-view/{{ product.id }}">Details</a></p>
+            <p><a href="/product-view/{{ product._id }}">Details</a></p>
         </div>
     </section>
 {% endif %}
