--- a/views/products.html
+++ b/views/products.html
@@ -6,7 +6,7 @@
         <div class="itemList">
         {% for item in items %}
             <div class="item">
-                <img src="data:image/{{ item.img.contentType }};base64,{{ item.img.data.toString('base64') }}" alt="{{ item.title }}">
+                <img src="/bucket/tmb-{{ item.img }}" alt="{{ item.title }}">
                 <h4>{{ item.title }}</h4>
                 <p>Price: ${{ item.price }}</p>
                 <p><a href="/product-view/{{ item.id }}">Details</a></p>
