--- a/views/about.html
+++ b/views/about.html
@@ -49,7 +49,7 @@
             We have many different plans and designs for more projects.
             We are constantly improving our designs and the way we
             construct items so the best possible piece is created every
-            time. Feel free to contact us about and ideas or questions
+            time. Feel free to contact us about any ideas or questions
             you may have. We are always looking for feedback and new
             ideas that will help us improve. We enjoy making great wood
             projects and hope you find joy in our work as well.
