Updated the UI and fixed bug in links on product list page

--- a/views/500.html
+++ b/views/500.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <p>An error has occured, Please try again.</p>
+    <p class="bubble">An error has occured, Please try again.</p>
 {% endblock %}
