--- a/views/about.html
+++ b/views/about.html
@@ -2,18 +2,20 @@
 
 {% block content %}
     <section>
-        <h2>About JKW Woodworks</h2>
-        <p>
-            JKW Woodworks goal is to provide quality handmade projects
-            that can be handed down from generation to generation. JKW
-            Woodworks started out as a simply hobby. We were tired of
-            goods and products from foreign countries that would break
-            soon after purchase. We wanted sturdy, hand crafted goods
-            that would stand the test of time. That is our number one
-            priority when designing and creating wood projects. 
-        </p>
+        <div class="bubble">
+            <h2>About JKW Woodworks</h2>
+            <p>
+                JKW Woodworks goal is to provide quality handmade projects
+                that can be handed down from generation to generation. JKW
+                Woodworks started out as a simply hobby. We were tired of
+                goods and products from foreign countries that would break
+                soon after purchase. We wanted sturdy, hand crafted goods
+                that would stand the test of time. That is our number one
+                priority when designing and creating wood projects. 
+            </p>
+        </div>
         <img src="/img/flag1-tmb.jpeg" alt="Flag on workbench">
-        <p>
+        <p class="bubble">
             One of signature projects is the American Flag. We make
             standard American Flags, Thin Blue Line Flags, Thin Red Line
             Flags, Thin Green Line Flags, and many more for every
@@ -26,7 +28,7 @@
             statement that shows your support and love of the country.
         </p>
         <img src="/img/flag2-tmb.jpeg" alt="Set of Flags">
-        <p>
+        <p class="bubble">
             Another signature project of ours is the epoxy tables. These
             tables range in all sizes from small end tables to large
             coffee and dining tables. Because of the epoxy, different
@@ -39,13 +41,13 @@
             of art that is very durable and will make a statement. 
         </p>
         <img src="/img/table1-tmb.jpeg" alt="A flag and table">
-        <p>
+        <p class="bubble">
             We work with all sorts of different lumber ranging from pine
             or dimensional lumber to cedar, cherry, and walnut. Each
             piece is unique and made to the customers desires. 
         </p>
         <img src="/img/table2-tmb.jpeg" alt="A wooden table">
-        <p>
+        <p class="bubble">
             We have many different plans and designs for more projects.
             We are constantly improving our designs and the way we
             construct items so the best possible piece is created every
@@ -55,7 +57,7 @@
             projects and hope you find joy in our work as well.
         </p>
         <img src="/img/table3-tmb.jpeg" alt="A flag table">
-        <p>
+        <p class="bubble">
             - JKW Woodworks Team
         </p>
     </section>
