--- a/views/base.html
+++ b/views/base.html
@@ -2,7 +2,6 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - JKW Wood Works</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -12,7 +11,7 @@
     <link rel="stylesheet" href="/css/medium.css">
     <link rel="stylesheet" href="/css/large.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
-    <script src = "/js/menu.js"></script>
+    <script src="/js/menu.js"></script>
 </head>
 <body>
     <header>
@@ -34,9 +33,9 @@
         {% endblock %}
     </main>
     <footer>
-        <p>&copy;2021 | JKW Wood Works</p>
-        <a href="https://www.facebook.com"> <img src="/img/facebook.png" alt="Facebook Page" width="50" height="50"> </a>
-        <a href="https://www.etsy.com/your/shops/JKWWoodWorks/onboarding/listings?ref=hdr-mcpa"><img src="/img/etsy.png" alt="Etsy Page" width="50" height="50"></a>
+        <p>&copy;2022 | JKW Wood Works</p>
+        <!-- <a href="https://www.facebook.com"> <img src="/img/facebook.png" alt="Facebook Page" width="50" height="50"> </a> -->
+        <a href="https://www.etsy.com/your/shops/JKWWoodWorks/onboarding/listings?ref=hdr-mcpa"><img src="/img/etsy-custom-tmb.png" alt="Etsy Page" width="50" height="50"></a>
     </footer>
 </body>
 </html>
