--- a/views/product-view.html
+++ b/views/product-view.html
@@ -4,12 +4,18 @@
     <section class="productViewCont">
         <img src="/bucket/stand-{{ item.img }}" alt="{{ item.title }}">
         <div class="productView">
-            <h2>{{ item.title }}</h2>
-            <h3>Price: ${{ item.price }}</h3>
-            <h3>Description</h3>
-            <p>{{ item.description | nl2br | safe }}</p>
-            <h3>Options</h3>
-            <p>{{ item.options | nl2br | safe }}</p>
+            <div class="bubble">
+                <h2>{{ item.title }}</h2>
+                <h3>Price: ${{ item.price }}</h3>
+            </div>
+            <div class="bubble">
+                <h3>Description</h3>
+                <p>{{ item.description | nl2br | safe }}</p>
+            </div>
+            <div class="bubble">
+                <h3>Options</h3>
+                <p>{{ item.options | nl2br | safe }}</p>
+            </div>
             <p class="bttn"><a href="{{ item.url }}">Buy Now</a></p>
         </div>
     </section>
