--- a/views/reset-password.html
+++ b/views/reset-password.html
@@ -2,14 +2,22 @@
 
 {% block content %}
     <section>
-        <h2>Reset Password</h2>
-        <form action="/admin/reset-password" method="POST">
-            <label for="password">New Password: </label>
-            <input type="password" id="password" name="password">
-            <label for="cpassword">Confirm Password: </label>
-            <input type="password" id="cpassword" name="cpassword">
-            <button type="submit">Reset Password</button>
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        </form>
+        <div class="bubble">
+            <h2>Reset Password</h2>
+            <form action="/admin/reset-password" method="POST">
+                <div>
+                    <label for="password">New Password: </label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div>
+                    <label for="cpassword">Confirm Password: </label>
+                    <input type="password" id="cpassword" name="cpassword">
+                </div>
+                <div>
+                    <button type="submit">Reset Password</button>
+                </div>
+                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+            </form>
+        </div>
     </section>
 {% endblock %}
