--- a/public/css/small.css
+++ b/public/css/small.css
@@ -1,292 +1,311 @@
+/* Code the affects the whole page */
+*,
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
 body {
     background-color: #EEE;
     font-family: 'Quicksand', sans-serif;
-	font-size: 1.3em;
+    font-size: 1.3em;
 }
 
 .page {
     max-width: 100%;
-	margin: 0 auto;
-	line-height: 1.8;
+    margin: 0 auto;
+    line-height: 1.8;
 }
 
 header{
-    /*background-color: #1a1aff; /* #1a1aff */
-	
-	/*background-image: url("static/img/wood1.jpg");*/
     color: white;
     padding: 0px;
 }
 
 footer{
-	background: #855E42;
-	height: 100px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: white;
+    /* fallback for old browsers */
+    background: #855e42;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to bottom right, rgba(133, 94, 66, 1), rgba(196, 138, 100, 1));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to bottom right, rgba(133, 94, 66, 1), rgba(196, 138, 100, 1));
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 
 footer img{
-	padding-left: 15px;
+    padding-left: 15px;
 }
 
 header h1 {
-	display: inline;
-	text-align: center;
-	font-family: 'Poppins', sans-serif;
+    display: inline;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 header img {
-	margin-right: 20px;
-	border-radius: 15px;
+    margin-right: 20px;
+    border-radius: 15px;
 }
 
 header p {
-	font-style: italic;
+    font-style: italic;
 }
 
 /* Code for the navigation */
 nav {
-	margin: 0 auto;
-	background: #855E42;
-	margin-top: -1em;
-	padding-top: 10px;
+    /* fallback for old browsers */
+    background: #855e42;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to bottom right, rgba(133, 94, 66, 1), rgba(196, 138, 100, 1));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to bottom right, rgba(133, 94, 66, 1), rgba(196, 138, 100, 1));
+    margin: 0 auto;
+    margin-top: -1em;
+    padding-top: 10px;
 }
 
 .navigation {
-	list-style: none;
-	padding: 0;
+    list-style: none;
+    padding: 0;
 }
 
 .navigation li:first-child {
-	display: block;
+    display: block;
 }
 
 .navigation li {
-	display: none;
+    display: none;
 }
 
 .navigation a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: white;
-	font-weight: 700;
+    display: block;
+    padding: 0.75rem;
+    text-align: left;
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
 }
 
 .navigation a:hover {
-	color: white;
-	background-color: black;
-	transition: all 0.63s ease 0s;
+    color: white;
+    background-color: black;
+    transition: all 0.63s ease 0s;
 }
 
 #thePage {
-	font-weight: bold;
-	/*background-color: #c9a505;*/
-	color: gold;
-	
+    font-weight: bold;
+    /*background-color: #c9a505;*/
+    color: gold;
+    
 }
 
 .responsive li {
-	display: block;
+    display: block;
 }
 
 /* Code for the main section */
 main {
-	padding: 20px;
-	max-width: 800px;
-	margin: 0 auto;
+    padding: 20px;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 main img {
-	max-width: 100%;
+    max-width: 100%;
 }
 
 section {
-	border-bottom: #161616 solid 3px;
-	padding-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 section:last-child {
-	border-color: #EEE;
+    border-color: #EEE;
 }
 
 .button {
-	display: block;
-	margin: 0 auto;
-	width: 200px;
+    display: block;
+    margin: 0 auto;
+    width: 200px;
 }
 
 .button:hover {
-	box-shadow: 0 0 50px #333;
+    box-shadow: 0 0 50px #333;
 }
 
-/* Code for the input form */
-form fieldset {
-    margin: 2rem 0;
-    border: 1px solid #192f77;
-    border-radius: 10px;
-    padding: 0.5rem;
-}
-
-form legend {
-    color: #192f77;
-    margin: 0 1rem;
-    padding: 0 0.5rem;
-}
-
-form label.top, form div {
+/* Code for the contact form */
+.container label {
     display: block;
-    padding-top: 1rem;
-    color: #9c2c13;
-    font-size: 0.8rem;
+    margin-top: 10px;
 }
 
-form label.top input, form label.top select {
+.container input {
     display: block;
-    font-size: 1rem;
-    border: solid 1px #999;
-    border-radius: 4px;
-    padding: 0.75rem;
-    color: #555;
-    width: 100%;
-    max-width: 20rem;
-    background-color: rgba(0,0,0,0.1);
+    padding: 10px;
 }
 
-form label.sbs {
+/* Code for the login form */
+form label {
     display: block;
-    padding: 0.75rem 0;
-    color: #555;
+    margin-top: 10px;
 }
 
-form input.submitBtn {
-    border: none;
-    background-color: #9c2c13;
+form input, form textarea {
+    display: block;
+    padding: 10px;
+    width: 95%;
+    border: black 1px solid;
+    border-radius: 5px;
+}
+
+form button {
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    border: black 1px solid;
+}
+
+form button:hover {
+    cursor: pointer;
     color: white;
-    border-radius: 1rem;
-    padding: 0.75rem 1.5rem;
-    margin: 0 0 2rem 2%;
-    width: 96%;
-    max-width: 20rem;
+    background-color: #464646;
+    transition: all 0.33s ease 0s;
 }
 
 /* Code for the contact card */
 .contact {
-	text-align: center;
+    text-align: center;
 }
 
 .contact h2 {
-	text-align: left;
+    text-align: left;
 }
 
 .contact iframe {
-	margin: 0 auto;
+    margin: 0 auto;
 }
 
 
 
 /* Code for the footer */
 footer {
-	text-align: center;
+    text-align: center;
 }
 
 footer a {
-	color: white;
+    color: white;
 }
 
 footer a:visited {
-	color: tomato;
+    color: tomato;
 }
 
 footer p:last-child {
-	color: white;
-	font-size: 0.8em;
+    color: white;
+    font-size: 0.8em;
 }
 
 /* Code for the Contact Us Form section */
 .container {
-	border-radius: 5px;
-	background-color: #f2f2f2;
-	padding: 20px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 
 }
 input[type=text], input[type=number], input[type=password], input[type=file], input[type=url], select, textarea {
-	width: 100%;
-	padding: 12px;
-	border: 1px solid #ccc;
-	border-radius: 4px;
-	box-sizing: border-box;
-	margin-top: 6px;
-	margin-bottom: 16px;
-	resize: vertical;
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
 }
 
 
 /* Code for Delete product - admin page */
 .selection{
-	display: flex;
+    display: flex;
 }
 
 .selection input{
-	padding: 8px;
-	width: 100px;
-	margin:3px;
+    padding: 8px;
+    width: 100px;
+    margin:3px;
 }
 
 section li {
-	padding: 3px;
+    padding: 3px;
 }
 
 .itemList {
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-gap: 10px;
-	align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    align-items: center;
 }
 
 .item {
-	background-color: white;
-	padding: 20px;
-	border: 2px solid darkgrey;
-	border-radius: 15px;
-	box-shadow: 0 2px 8px rgba(0,0,0,0.26);
+    background-color: white;
+    padding: 20px;
+    border: 2px solid darkgrey;
+    border-radius: 15px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.26);
 }
 
 .item p:last-child {
-	text-align: center;
-	padding: 5px;
-	border-radius: 20px;
-	background-color: #f44336;
-	color: white;
-	max-width: 100px;
-	margin: 0 auto;
+    text-align: center;
+    padding: 5px;
+    border-radius: 20px;
+    background-color: #f44336;
+    color: white;
+    max-width: 100px;
+    margin: 0 auto;
 }
 
 .item p a:link, .item p a:visited {
-	text-decoration: none;
-	color: white;
+    text-decoration: none;
+    color: white;
 }
 
 .bttn {
-	margin: 0 auto;
-	max-width: 100%;
-	display: block;
-	font-size: 2em;
+    display: block;
+    font-size: 2em;
 }
 
 .bttn a {
-	text-align: center;
-	padding: 5px;
-	border-radius: 20px;
-	background-color: #f44336;
-	color: white;
-	max-width: 150px;
+    text-align: center;
+    padding: 15px;
+    border-radius: 20px;
+    background-color: #f44336;
+    color: white;
+    max-width: 150px;
 }
 
 .bttn a:link, .bttn a:visited {
-	text-decoration: none;
-	color: white;
+    text-decoration: none;
+    color: white;
+}
+
+.bttn a:hover {
+    background-color: #161616;
+    transition: all 0.63s ease 0s;
+}
+
+.bubble {
+    border: solid 2px lightgrey;
+    border-radius: 15px 15px 15px 15px;
+    background-color: white;
+    padding: 20px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.26);
 }
