--- a/views/404.html
+++ b/views/404.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <p>The page you are looking for is not here.</p>
+    <p class="bubble">The page you are looking for is not here.</p>
 {% endblock %}
