--- a/views/delete-product.html
+++ b/views/delete-product.html
@@ -2,20 +2,22 @@
 
 {% block content %}
     <section>
-        <h2>Confirm to Delete Product - {{ productTitle }}</h2>
-        <p>
-            Are you sure you want to delete the product, {{ productTitle }}?
-        </p>
-        <div class="selection">
-        <form action="/admin/delete-product/{{ id }}" method="POST">
-            <input type="hidden" name="id" value="{{ id }}">
-            <input type="submit" value="Yes">
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        </form>
-        <form action="/admin" method="GET">
-            <input type="submit" value="No">
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        </form>
+        <div class="bubble">
+            <h2>Confirm to Delete Product - {{ productTitle }}</h2>
+            <p>
+                Are you sure you want to delete the product, {{ productTitle }}?
+            </p>
+            <div class="selection">
+                <form action="/admin/delete-product/{{ id }}" method="POST">
+                    <div><button>Yes</button></div>
+                    <input type="hidden" name="id" value="{{ id }}">
+                    <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+                </form>
+                <form action="/admin" method="GET">
+                    <div><button>No</button></div>
+                    <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+                </form>
+            </div>
         </div>
     </section>
 {% endblock %}
