--- a/views/edit-product.html
+++ b/views/edit-product.html
@@ -2,22 +2,36 @@
 
 {% block content %}
     <section>
-        <h2>Update the Product Details</h2>
-        <form action="/admin/edit-product/{{ id }}" method="POST" enctype="multipart/form-data">
-            <label for="name">Name: </label>
-            <input type="text" name="name" id="name" value="{% if productTitle is defined %}{{ productTitle }}{% endif %}">
-            <label for="price">Starting Price: </label>
-            <input type="number" step="0.01" name="price" id="price" value="{% if price is defined %}{{ price }}{% endif %}">
-            <label for="image">Image: </label>
-            <input type="file" name="image" id="image">
-            <label for="description">Description: </label>
-            <textarea name="description" id="description" rows="10">{% if description is defined %}{{ description }}{% endif %}</textarea>
-            <label for="options">Options: </label>
-            <textarea name="options" id="options" rows="10">{% if options is defined %}{{ options }}{% endif %}</textarea>
-            <label for="url">External Link: </label>
-            <input type="url" id="url" name="url" value="{% if url is defined %}{{ url }}{% endif %}">
-            <button type="submit">Edit Product</button>
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        </form>
+        <div class="bubble">
+            <h2>Update the Product Details</h2>
+            <form action="/admin/edit-product/{{ id }}" method="POST" enctype="multipart/form-data">
+                <div>
+                    <label for="name">Name: </label>
+                    <input type="text" name="name" id="name" value="{% if productTitle is defined %}{{ productTitle }}{% endif %}" required>
+                </div>
+                <div>
+                    <label for="price">Starting Price: </label>
+                    <input type="number" step="0.01" name="price" id="price" value="{% if price is defined %}{{ price }}{% endif %}" required>
+                </div>
+                <div>
+                    <label for="image">Image: </label>
+                    <input type="file" name="image" id="image" required>
+                </div>
+                <div>
+                    <label for="description">Description: </label>
+                    <textarea name="description" id="description" rows="10" required>{% if description is defined %}{{ description | safe }}{% endif %}</textarea>
+                </div>
+                <div>
+                    <label for="options">Options: </label>
+                    <textarea name="options" id="options" rows="10" required>{% if options is defined %}{{ options | safe }}{% endif %}</textarea>
+                </div>
+                <div>
+                    <label for="url">External Link: </label>
+                    <input type="url" id="url" name="url" value="{% if url is defined %}{{ url }}{% endif %}">
+                </div>
+                <div><button type="submit">Edit Product</button></div>
+                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+            </form>
+        </div>
     </section>
 {% endblock %}
