--- a/views/login.html
+++ b/views/login.html
@@ -2,15 +2,23 @@
 
 {% block content %}
     <section>
-        <h2>Login</h2>
-        <p>{{ errorMessage }}</p>
-        <form action="/login" method="POST">
-            <label for="username">Username: </label>
-            <input type="text" id="username" name="username">
-            <label for="password">Password: </label>
-            <input type="password" id="password" name="password">
-            <button type="submit">Login</button>
-            <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-        </form>
+        <div class="bubble">
+            <h2>Login</h2>
+            <p>{{ errorMessage }}</p>
+            <form action="/login" method="POST">
+                <div>
+                    <label for="username">Username: </label>
+                    <input type="text" id="username" name="username">
+                </div>
+                <div>
+                    <label for="password">Password: </label>
+                    <input type="password" id="password" name="password">
+                </div>
+                <div>
+                    <button type="submit">Login</button>
+                </div>
+                <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+            </form>
+        </div>
     </section>
 {% endblock %}
