--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block addons %}
+    <meta name="description" content="JKW Woodworks goal is to provide quality handmade projects that can be handed down from generation to generation. JKW Woodworks started out as a simply hobby. We were tired of goods and products from foreign countries that would break soon after purchase. We wanted sturdy, hand crafted goods that would stand the test of time. That is our number one priority when designing and creating wood projects.">
+    <meta name="author" content="JKW Woodworks Team">
+{% endblock %}
+
 {% block content %}
     <section>
         <div class="bubble">
