--- a/views/base.html
+++ b/views/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/large.css">
     <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
     <script src="/js/menu.js"></script>
+    {% block addons %}{% endblock %}
 </head>
 <body>
     <header>
