--- a/views/contact.html
+++ b/views/contact.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block addons %}
+    <meta name="description" content="You can use this form to contact us if you have questions / comments. You can also order a product from this form if you don't want to buy it from the other services.">
+    <meta name="author" content="JKW Woodworks Team">
+{% endblock %}
+
 {% block content %}
     <section>
         <div class="bubble">
