--- a/views/products.html
+++ b/views/products.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
+{% block addons %}
+    <meta name="description" content="Here is the complete list of all our products.">
+    <meta name="author" content="JKW Woodworks Team">
+{% endblock %}
+
 {% block content %}
     <section>
         <div class="bubble">
