--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,22 @@
 {% extends 'base.html' %}
 
+{% block addons %}
+    <meta name="description" content="Welcome to JKW Wood Works, our goal is to provide quality handmade furniture goods that will last for years.">
+    <meta name="author" content="JKW Woodworks Team">
+{% endblock %}
+
 {% block content %}
 {% if product %}
     <section>
         <div class="bubble">
             <h2>The Latest Product</h2>
             <p>
-                Check out the latest product being made by the
-                JKW Wood Works team!
+                Welcome to JKW Wood Works, our goal is to provide
+                quality handmade furniture goods that will last
+                for years.
+            </p>
+            <p>
+                Check out our latest products
             </p>
         </div>
         <div class="item">
