Added Facebook link

--- a/views/base.html
+++ b/views/base.html
@@ -35,7 +35,7 @@
     </main>
     <footer>
         <p>&copy;2022 | JKW Wood Works</p>
-        <!-- <a href="https://www.facebook.com"> <img src="/img/facebook.png" alt="Facebook Page" width="50" height="50"> </a> -->
+        <a href="https://www.facebook.com/profile.php?id=100076510699459"> <img src="/img/facebook.png" alt="Facebook Page" width="50" height="50"> </a>
         <a href="https://www.etsy.com/your/shops/JKWWoodWorks/onboarding/listings?ref=hdr-mcpa"><img src="/img/etsy-custom-tmb.png" alt="Etsy Page" width="50" height="50"></a>
     </footer>
 </body>
